--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -1,3 +1,11 @@
+.particles {
+  position:fixed;
+  z-index:-1;
+  width: 100%;
+  height: 100vh;
+  background-color:#f3f3f3;
+}
+
 .title {
   color: red;
 }
