--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -1,11 +1,14 @@
 .particles {
-  position:fixed;
-  z-index:-1;
+  position: fixed;
+  z-index: 1;
   width: 100%;
   height: 100vh;
-  background-color:#f3f3f3;
-}
-
-.title {
-  color: red;
+  background-color:#FDDA59;
+  background-image:
+  radial-gradient(circle at 100% 150%, #FDDA59 24%, #fff 24%, #fff 28%, #FDDA59 28%, #FDDA59 36%, #fff 36%, #fff 40%, transparent 40%, transparent),
+  radial-gradient(circle at 0    150%, #FDDA59 24%, #fff 24%, #fff 28%, #FDDA59 28%, #FDDA59 36%, #fff 36%, #fff 40%, transparent 40%, transparent),
+  radial-gradient(circle at 50%  100%, #fff 10%, #FDDA59 10%, #FDDA59 23%, #fff 23%, #fff 30%, #FDDA59 30%, #FDDA59 43%, #fff 43%, #fff 50%, #FDDA59 50%, #FDDA59 63%, #fff 63%, #fff 71%, transparent 71%, transparent),
+  radial-gradient(circle at 100% 50%, #fff 5%, #FDDA59 5%, #FDDA59 15%, #fff 15%, #fff 20%, #FDDA59 20%, #FDDA59 29%, #fff 29%, #fff 34%, #FDDA59 34%, #FDDA59 44%, #fff 44%, #fff 49%, transparent 49%, transparent),
+  radial-gradient(circle at 0    50%,#fff 5%, #FDDA59 5%, #FDDA59 15%, #fff 15%, #fff 20%, #FDDA59 20%, #FDDA59 29%, #fff 29%, #fff 34%, #FDDA59 34%, #FDDA59 44%, #fff 44%, #fff 49%, transparent 49%, transparent);
+  background-size: 50px 25px;
 }
